#94-Add_fixmes_from_code_review: Renamed SettlementPosition to BuildingSite as requested in fixme